Import funguloids-win32-1.0.7z (version 1.0)
These files have been moved:

docs -> bin/docs
music -> bin/music
readme.html -> bin/readme.html
plugins.cfg -> bin/plugins.cfg
resources.cfg -> bin/resources.cfg
gamesettings.cfg -> bin/gamesettings.cfg
funguloids.mpk -> bin/funguloids.mpk
bootstrap.mpk -> bin/bootstrap.mpk

These files have been unpacked:

bin/bootstrap.mpk
bin/funguloids.mpk

These files have been converted:

bin/funguloids/whiteglow2.dds
bin/funguloids/bg2.dds
bin/funguloids/bg4.dds
bin/funguloids/bg8.dds
bin/funguloids/bg1.dds
bin/funguloids/fieryglow.dds
bin/funguloids/bg5.dds
bin/funguloids/bg3.dds
bin/funguloids/whiteglow.dds
bin/funguloids/bg7.dds
bin/funguloids/bg6.dds
bin/funguloids/logo.dds
bin/funguloids/Plane.mesh
bin/funguloids/Drop.mesh
bin/funguloids/Tentacle.mesh
bin/funguloids/Asteroid1.mesh
bin/funguloids/Base.mesh
bin/funguloids/Whirler.mesh
bin/funguloids/Mushroom.mesh
bin/funguloids/Asteroid2.mesh
bin/funguloids/Asteroid3.mesh
bin/funguloids/WormBall.mesh
bin/funguloids/Base-Armature.skeleton

These files have been deleted:

bin/bootstrap.mpk
bin/funguloids.mpk
bin/funguloids/whiteglow2.dds
bin/funguloids/bg2.dds
bin/funguloids/bg4.dds
bin/funguloids/bg8.dds
bin/funguloids/bg1.dds
bin/funguloids/fieryglow.dds
bin/funguloids/bg5.dds
bin/funguloids/bg3.dds
bin/funguloids/whiteglow.dds
bin/funguloids/bg7.dds
bin/funguloids/bg6.dds
bin/funguloids/logo.dds
bin/funguloids/Plane.mesh
bin/funguloids/Drop.mesh
bin/funguloids/Tentacle.mesh
bin/funguloids/Asteroid1.mesh
bin/funguloids/Base.mesh
bin/funguloids/Whirler.mesh
bin/funguloids/Mushroom.mesh
bin/funguloids/Asteroid2.mesh
bin/funguloids/Asteroid3.mesh
bin/funguloids/WormBall.mesh
bin/funguloids/Base-Armature.skeleton
bin/bootstrap/VeraIt.ttf
bin/bootstrap/Vera.ttf
bin/bootstrap/VeraBd.ttf
bin/bootstrap/VeraBI.ttf
cg.dll
DevIL.dll
fmodex.dll
Funguloids.exe
ILU.dll
ILUT.dll
msvcp71.dll
msvcr71.dll
OgreMain.dll
OgrePlatform.dll
plugins/Plugin_OctreeSceneManager.dll
plugins/RenderSystem_GL

--- a/bin/docs/stylesheet.css
+++ b/bin/docs/stylesheet.css
@@ -63,6 +63,10 @@ div.menu li {
 	font-size: 122%;
 }
 
+div.menu h2 {
+	color: rgb(209, 101, 96);
+}
+
 div.menu a {
 	margin-top: 0px;
 	padding: 2px;
