Import funguloids-win32-src-1.06.zip (version 1.06)
These files have been moved:

funguloids.png -> bin/funguloids.png

These files have been deleted:

lua
include/SimpleIni

These files have been merged from data/src:

bin/bootstrap
bin/funguloids
bin/gamesettings.cfg
bin/music
bin/plugins.cfg
bin/resources.cfg

--- a/bin/docs/stylesheet.css
+++ b/bin/docs/stylesheet.css
@@ -99,7 +99,8 @@ span.version2 {
 }
 
 span.file {
-	font-family: courier;
+	font-family: monospace;
+	font-size: 130%;
 	color: rgb(163, 128, 124);
 }
 
